24: Implemented Product Service